--- a/StateFlagsOBJC31/Base.lproj/Main.storyboard
+++ b/StateFlagsOBJC31/Base.lproj/Main.storyboard
@@ -16,27 +16,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ydm-It-8EW">
-                            <size key="itemSize" width="287" height="238"/>
+                            <size key="itemSize" width="220" height="168"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1bk-Hd-GCe">
-                                <rect key="frame" x="63.5" y="0.0" width="287" height="238"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="stateCell" id="1bk-Hd-GCe" customClass="StateCollectionViewCell">
+                                <rect key="frame" x="97" y="0.0" width="220" height="168"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="krK-TB-9vS">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="238"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="220" height="168"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="8UR-YH-Q71">
-                                            <rect key="frame" x="0.0" y="0.0" width="287" height="238"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="220" height="168"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SQX-sg-NfD">
-                                                    <rect key="frame" x="0.0" y="0.0" width="287" height="217.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="220" height="147.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="140" id="hsK-qD-XuS"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nqa-ee-cjj">
-                                                    <rect key="frame" x="0.0" y="217.5" width="287" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="147.5" width="220" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -51,7 +54,11 @@
                                         <constraint firstItem="8UR-YH-Q71" firstAttribute="height" secondItem="krK-TB-9vS" secondAttribute="height" id="mxg-Sc-XxD"/>
                                     </constraints>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="287" height="238"/>
+                                <size key="customSize" width="220" height="168"/>
+                                <connections>
+                                    <outlet property="stateFlagImageView" destination="SQX-sg-NfD" id="uja-Xi-2Fc"/>
+                                    <outlet property="stateNameLabel" destination="nqa-ee-cjj" id="4ed-mq-FeY"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
